# PyF

./: .envrc  .gitignore  ChangeLog.md  FormatStringLiteral.cabal  LICENSE  PITCHME.md  PyF.cabal  Readme.md  cabal.project  default.nix  flake.nix  hie.yaml  missing_variable  nixpkgs.nix  shell.nix  stack.yaml  treefmt.nix
.circleci/: config.yml
.github/workflows/: ci.yml  master.yml
.golden/-4342647300489545826/: golden
.golden/-559153311506421916/: golden
.golden/-608734388740815869/: golden
.golden/-7029437438637288708/: golden
.golden/-7030000414293697510/: golden
.golden/-7033096789363194467/: golden
.golden/-8862740133902269087/: golden
.golden/-8863303109558677885/: golden
.golden/-8865836508904655568/: golden
.golden/-8866962460351694124/: golden
.golden/-8868932879679082057/: golden
.golden/-8877940512730742825/: golden
.golden/-955223088025738585/: golden
.golden/-972393886248710740/: golden
.golden/-972675374043359879/: golden
.golden/-973238354129060121/: golden
.golden/-981683007095020647/: golden
.golden/-982245987180720889/: golden
.golden/1039339902865820990/: golden
.golden/1179194556644623826/: golden
.golden/1398692563425247859/: golden
.golden/1640634027373935614/: golden
.golden/2157463209259933381/: golden
.golden/2897849520519503487/: golden
.golden/3089090107905559368/: golden
.golden/3420956872570442319/: golden
.golden/5755283065522441917/: golden
.golden/6036259654057340493/: golden
.golden/6038793049108247706/: golden
.golden/6039356029193947908/: golden
.golden/6045267287109001261/: golden
.golden/6046956218641740019/: golden
.golden/6047800682159908474/: golden
.golden/6048082170088778591/: golden
.golden/6048363662245608676/: golden
.golden/6048645150040257841/: golden
.golden/6050052589349056034/: golden
.golden/6066378924053859748/: golden
.golden/6097241206483808698/: golden
.golden/6623238490461560947/: golden
.golden/6874382203897971272/: golden
.golden/7717561110821329704/: golden
.golden/7718968550063017457/: golden
.golden/7719531530148717643/: golden
.golden/7720657481595756207/: golden
.golden/8270079288213682032/: golden
.golden/85163210393859768/: golden
src/: PyF.hs  Test.hs
src/PyF/: Class.hs  Formatters.hs  Plugin.hs  PythonSyntax.hs  QQ.hs  Test.hs  Trimmed.hs
src/PyF/Internal/: Extensions.hs  Meta.hs  Parser.hs  ParserEx.hs  PythonSyntax.hs  QQ.hs
src/Yak/: PythonSyntax.hs
test/: Spec.hs  SpecCustomDelimiters.hs  SpecFail.hs  SpecOverloaded.hs  SpecPlugin.hs  SpecUtils.hs
test/failureCases/: bug18.hs
test/golden/: -2790183683378081595.golden  -4342647300489545826.golden  -7030000414293697510.golden  -7033096789363194467.golden  -8866962460351694124.golden  -8868932879679082057.golden  -981683007095020647.golden  1398692563425247859.golden  1640634027373935614.golden  2157463209259933381.golden  2897849520519503487.golden  3089090107905559368.golden  4696723118328775155.golden  5755283065522441917.golden  6036259654057340493.golden  6038793049108247706.golden  6039356029193947908.golden  6045267287109001261.golden  6048082170088778591.golden  6048363662245608676.golden  6048645150040257841.golden  6050052589349056034.golden  6066378924053859748.golden  6874382203897971272.golden  7211512577584578586.golden  7720657481595756207.golden  85163210393859768.golden  Hello {length name}.16675806454852491955.golden  Hello {name}.16618004304593959603.golden  Hello {piCL.{precision}}.9628757040831863475.golden  Hello {piCL.{truncate number + precision}}.18094049741103110835.golden  Hello {piCL{width}}.15463239215289408179.golden  fooBACKSLASHPbar.golden  fooBSPbar.17645057532673886893.golden  fooNEWLINEbliBACKSLASHPbar.golden  hello { world.10778336899993839283.golden  hello { world.golden  hello } world.5295037443422799539.golden  hello } world.golden  helloNEWLINE    {NEWLINElet a = 5NEWLINE    b = 10NEWLINEin 1 + - SLASH lalalal}.golden  (+59 more)
test/golden96/: Hello {length name}.16675806454852491955.golden  Hello {name}.16618004304593959603.golden  Hello {piCL.{precision}}.9628757040831863475.golden  Hello {piCL.{truncate number + precision}}.18094049741103110835.golden  Hello {piCL{width}}.15463239215289408179.golden  fooBSPbar.17645057532673886893.golden  fooNLbliBSPbar.16759496276764189145.golden  hello { world.10778336899993839283.golden  hello } world.5295037443422799539.golden  helloNL    {NLlet a = 5NL    b = 10NLin 1 + - SL lalalal}.3018767237106994099.golden  helloNLNLNL{piCLl}.13123157148160021427.golden  {1 + - SL lalalal}.14923086665437293731.golden  {TrueCLd}.12627313193367841398.golden  {TrueCLf}.18281408089045870326.golden  {True}.16254223077612353942.golden  {helloCL s}.13047921915648718386.golden  {helloCL%}.1257653362598537778.golden  {helloCL+s}.1657517030647448626.golden  {helloCL,s}.14139635988852178482.golden  {helloCL-s}.12627805606214404146.golden  {helloCL=100s}.14374776122070431282.golden  {helloCL=100}.9444838110946424370.golden  {helloCLE}.15676531368138664498.golden  {helloCLG}.17442699390234010162.golden  {helloCLX}.8447528333473699378.golden  {helloCL_s}.1094067961907256370.golden  {helloCLb}.14869862508711808562.golden  {helloCLd}.1892681375540151858.golden  {helloCLe}.13933826712837941810.golden  {helloCLf}.14332487603622862386.golden  {helloCLg}.9607247906229690930.golden  {helloCLo}.9389880575827657266.golden  {helloCLx}.14710080644372944434.golden  {numberCLX}.4609648040604121432.golden  {numberCLb}.8801685868342243288.golden  {numberCLd}.13336740346716692056.golden  {numberCLo}.12467189151987896600.golden  {numberCLx}.14457861675063419224.golden  {piCL.{SL}}.6840925804160914882.golden  {piCL.{}}.9894464503607709506.golden  (+5 more)
tree-sitter-pyf/: .envrc  Readme.md  example-file  grammar.js  package.json  tree-sitter.json
tree-sitter-pyf/vim-plugin/after/queries/haskell/: highlights.scm  injections.scm
tree-sitter-pyf/vim-plugin/after/queries/pyf/: highlights.scm  injections.scm
