cabal-version:      2.4
name:               PyF
version:            0.11.4.0
synopsis:
  Quasiquotations for a python like interpolated string formatter

description:
  Quasiquotations for a python like interpolated string formatter.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Guillaume Bouchard
maintainer:         guillaum.bouchard@gmail.com
category:           Text
build-type:         Simple
extra-source-files:
  ChangeLog.md
  Readme.md
  test/golden/*.golden
  test/golden96/*.golden

library
  exposed-modules:
    PyF
    PyF.Class
    PyF.Formatters
    PyF.Internal.Meta
    PyF.Internal.Parser
    PyF.Internal.ParserEx
    PyF.Internal.PythonSyntax
    PyF.Internal.QQ

  build-depends:
    , base              >=4.12   && <4.22
    , bytestring        >=0.10.8 && <0.13
    , ghc               >=8.6.1
    , mtl               >=2.2.2  && <2.4
    , parsec            >=3.1.13 && <3.2
    , template-haskell  >=2.14.0 && <2.24
    , text              >=1.2.3  && <2.2
    , time              >=1.8.0  && <1.15

  if impl(ghc <9.2.1)
    build-depends: ghc-boot >=8.6.1 && <9.7

  hs-source-dirs:     src
  ghc-options:        -Wall -Wunused-packages -Wincomplete-uni-patterns
  default-language:   Haskell2010
  default-extensions: QuasiQuotes

test-suite pyf-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    SpecCustomDelimiters
  build-depends:
    , base
    , bytestring
    , hspec
    , PyF
    , template-haskell
    , text
    , time

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -Wunused-packages

  default-language: Haskell2010

test-suite pyf-overloaded
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          SpecOverloaded.hs
  build-depends:
    , base
    , bytestring
    , hspec
    , PyF
    , text

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -Wunused-packages

  default-language: Haskell2010

test-suite pyf-failure
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          SpecFail.hs
  build-depends:
    , base
    , deepseq
    , filepath
    , hspec
    , HUnit
    , process
    , PyF
    , temporary
    , text

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -Wunused-packages

  default-language: Haskell2010

source-repository head
  type:     git
  location: http://github.com/guibou/PyF
